--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,3 @@
-html,
 body {
     font-family: monospace;
 }
@@ -16,7 +15,11 @@ body {
 
 nav {
     display: flex;
-    border-bottom: 1px solid #999;
+}
+
+nav, hr {
+    border: none;
+    border-bottom: 1px solid #ccc;
 }
 
 nav .project-name {
@@ -34,25 +37,23 @@ a {
     margin: 9px;
 }
 
-a:hover {
-    background: #f7f7f7;
+table {
+    max-width: 80vw;
 }
 
-.code {
-    width: 80%;
-    height: 100px;
+.CodeMirror {
+    height: 150px !important;
+    min-width: 400px !important;
+    background-color: #f7f7f7 !important;
     padding-left: 35px;
-    border: none;
-    background: #f7f7f7;
 }
 
-.code:focus {
+.CodeMirror:focus {
     outline: none;
-    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.6) !important;
 }
 
 .code-result {
-    width: 80%;
     margin-bottom: 10px;
     color: #333;
     border: 1px solid #ccc;
@@ -74,9 +75,6 @@ a:hover {
 @media screen and (min-width: 1000px) {
     .code-container:focus-within form {
         margin-top: -42px;
-    }
-    .code-tools {
-        padding-left: 900px;
     }
 
 .error {
